// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateProjectForm renders request form correctly 1`] = `
<div>
  <form
    class="form"
  >
    Field Mock: 
    {"name":"name","label":"Name","className":"input"}
    Field Mock: 
    {"name":"projectKey","label":"Project Key","className":"input"}
    Field Mock: 
    {"name":"description","label":"Description","className":"input"}
    Field Mock: 
    {"name":"collaborationLink","label":"Collaboration Link","className":"input"}
    CreateFormControls Mock 
    {"fullWidthButtons":true,"actionLabel":"Request"}
  </form>
</div>
`;

exports[`CreateProjectForm renders to match snapshot 1`] = `
<div>
  <form
    class="form"
  >
    Field Mock: 
    {"name":"name","label":"Name","className":"input"}
    Field Mock: 
    {"name":"projectKey","label":"Project Key","className":"input"}
    Field Mock: 
    {"name":"description","label":"Description","className":"input"}
    Field Mock: 
    {"name":"collaborationLink","label":"Collaboration Link","className":"input"}
    CreateFormControls Mock 
    {"fullWidthButtons":true,"actionLabel":"Create"}
  </form>
</div>
`;
